public/lite/api/zh-CN/r1.10/_sources/generate/program_listing_file_include_converter_include_core_ir_dtype_type.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_converter_include_core_ir_dtype_type.h:

Program Listing for File type.h
===============================

|exhale_lsh| :ref:`Return to documentation for file <file_include_converter_include_core_ir_dtype_type.h>` (``include/converter/include/core/ir/dtype/type.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   
   #ifndef MINDSPORE_CORE_IR_DTYPE_TYPE_H_
   #define MINDSPORE_CORE_IR_DTYPE_TYPE_H_
   
   #include <cstddef>
   #include <iostream>
   #include <initializer_list>
   #include <unordered_map>
   #include <memory>
   #include <utility>
   #include <sstream>
   #include <string>
   #include <vector>
   #include <type_traits>
   #include <algorithm>
   
   #include "utils/hash_map.h"
   #include "base/base.h"
   #include "ir/named.h"
   #include "ir/dtype/type_id.h"
   #include "utils/ms_utils.h"
   
   namespace mindspore {
   
   TypeId IntBitsToTypeId(const int nbits);
   TypeId UIntBitsToTypeId(const int nbits);
   TypeId FloatBitsToTypeId(const int nbits);
   TypeId ComplexBitsToTypeId(const int nbits);
   
   MS_CORE_API const std::string &TypeIdLabel(const TypeId &v);
   MS_CORE_API TypeId NormalizeTypeId(const TypeId type_id);
   bool IsSameObjectType(const Type &lhs, const Type &rhs);
   MS_CORE_API size_t GetTypeByte(const TypePtr &type_ptr);
   
   enum class BitsNum : int {
     eBits8 = 8,
     eBits16 = 16,
     eBits32 = 32,
     eBits64 = 64,
     eBits128 = 128,
   };
   
   class MS_CORE_API Type : public Value {
    public:
     Type() : meta_type_(kMetaTypeType), is_generic_(true) {}
   
     explicit Type(TypeId t, bool is_generic = true) : meta_type_(t), is_generic_(is_generic) {}
   
     ~Type() override = default;
     MS_DECLARE_PARENT(Type, Value)
   
     bool operator==(const Value &other) const override;
   
     TypeId meta_type() const { return meta_type_; }
   
     virtual TypeId type_id() const { return meta_type_; }
   
     virtual TypeId generic_type_id() const { return kMetaTypeType; }
   
     virtual bool operator!=(const Type &other) const { return !(*this == other); }
   
     virtual bool operator==(const Type &other) const { return this->type_id() == other.type_id(); }
   
     virtual bool equal(const TypePtr other) const { return *this == *other; }
   
     virtual TypeId object_type() const { return kTypeUnknown; }
   
     virtual TypeId parent_type() const { return kTypeUnknown; }
   
     virtual TypeId number_type() const { return kTypeUnknown; }
   
     virtual TypePtr DeepCopy() const = 0;
   
     virtual TypePtr Clone() const { return DeepCopy(); }
   
     std::size_t hash() const override { return static_cast<size_t>(type_id()); }
     std::string ToString() const override { return TypeIdLabel(meta_type_); }
   
     virtual std::string ToReprString() const { return ToString(); }
   
     std::string ReprString() const { return "mindspore." + ToReprString(); }
     void dump() const override { std::cout << ToString() << std::endl; }
   
     bool IsUnknown() const { return (meta_type_ == kMetaTypeType); }
   
     bool IsGeneric() const { return is_generic_; }
     abstract::AbstractBasePtr ToAbstract() override;
   
     MS_CORE_API friend std::ostream &operator<<(std::ostream &os, const Type &type);
   
     MS_CORE_API friend std::ostream &operator<<(std::ostream &os, const TypePtr type);
   
    private:
     TypeId meta_type_;
     bool is_generic_;
   };
   
   using TypePtrList = std::vector<TypePtr>;
   
   class MS_CORE_API Object : public Type {
    public:
     Object() : Type(kMetaTypeObject), object_type_(kMetaTypeObject), parent_type_(kMetaTypeObject) {}
   
     explicit Object(const TypeId object_type, bool is_generic = true)
         : Type(kMetaTypeObject, is_generic), object_type_(object_type), parent_type_(kMetaTypeObject) {}
   
     explicit Object(const TypeId object_type, const TypeId parent_type, bool is_generic = true)
         : Type(kMetaTypeObject, is_generic), object_type_(object_type), parent_type_(parent_type) {}
   
     ~Object() override = default;
     MS_DECLARE_PARENT(Object, Type)
   
     TypeId object_type() const override { return object_type_; }
     TypeId parent_type() const override { return parent_type_; }
     TypeId type_id() const override { return object_type_; }
     TypeId generic_type_id() const override { return kMetaTypeObject; }
     bool equal(const TypePtr other) const override;
     std::string ToString() const override { return std::string("Object:") + TypeIdLabel(object_type_); }
   
     friend std::ostream &operator<<(std::ostream &os, const Object &obj);
   
     friend std::ostream &operator<<(std::ostream &os, const std::shared_ptr<Object> obj);
   
    private:
     const TypeId object_type_;
     const TypeId parent_type_;
   };
   
   MS_CORE_API const mindspore::HashMap<TypeId, std::string> &type_name_map();
   
   MS_CORE_API const mindspore::HashMap<TypeId, int> &type_priority_map();
   
   MS_CORE_API std::ostream &operator<<(std::ostream &os, const TypePtrList &types);
   
   struct MS_CORE_API TypeHashById {
     std::size_t operator()(TypePtr const &type) const {
       return type == nullptr ? 0 : static_cast<size_t>(type->type_id());
     }
   };
   
   struct MS_CORE_API TypeEqualById {
     bool operator()(const TypePtr &t1, const TypePtr &t2) const {
       return (t1 == t2) || (t1 != nullptr && t2 != nullptr && t1->type_id() == t2->type_id());
     }
   };
   
   struct MS_CORE_API TypeListHasher {
     std::size_t operator()(const TypePtrList &type_list) const {
       // Hash for empty list is zero.
       if (type_list.empty()) {
         return 0;
       }
       // Hashing all elements is costly, we only calculate hash from
       // the first element and last few elements base on some experiments.
       // In some scenarios, this may lead high hash conflicts. Therefore,
       // we should use this hash function in hash tables that can tolerate
       // high hash conflicts, such as std::unordered_map.
       constexpr size_t max_last_types = 4;
       const size_t n_args = type_list.size();
       // Hash from list size and the first element.
       const auto &first_type = type_list[0];
       std::size_t hash_sum = hash_combine(n_args, (first_type == nullptr ? 0 : first_type->hash()));
       // Hash from last few elements.
       const size_t start = ((n_args > max_last_types) ? (n_args - max_last_types) : 1);
       for (size_t i = start; i < n_args; ++i) {
         const auto &type = type_list[i];
         hash_sum = hash_combine(hash_sum, (type == nullptr ? 0 : type->hash()));
       }
       return hash_sum;
     }
   };
   
   struct MS_CORE_API TypeListEqual {
     bool operator()(TypePtrList const &lhs, TypePtrList const &rhs) const {
       const auto size = lhs.size();
       if (size != rhs.size()) {
         return false;
       }
       for (std::size_t i = 0; i < size; ++i) {
         if (!common::IsEqual(lhs[i], rhs[i])) {
           return false;
         }
       }
       return true;
     }
   };
   
   // Hash map that using TypePtrList as the key.
   template <typename T>
   using TypeListMap = std::unordered_map<TypePtrList, T, TypeListHasher, TypeListEqual>;
   }  // namespace mindspore
   
   #endif  // MINDSPORE_CORE_IR_DTYPE_TYPE_H_
